examples/kustomize/demo-apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pomerium-demo-apps
  labels:
    purpose: demo-applications
    environment: demo
